TOP-46 fix animation in dobryaki and scroll on small desktops

--- a/topchik-static/src/components/Chart/styles.less
+++ b/topchik-static/src/components/Chart/styles.less
@@ -27,6 +27,11 @@
       width: 100%;
       height: 100%;
       margin-top: 5px;
+      margin-right: 5px;
+    }
+
+    &__medals {
+      display: flex;
     }
   
     &__date {
@@ -35,5 +40,14 @@
   
     &__count {
       width: 100%;
+    }
+  }
+
+  .statistics-summary {
+    margin: 20px 0 10px;
+    font-family: "Roboto", sans-serif;
+  
+    @media @screen-gt-s {
+      margin: 20px 0 10px;
     }
   }
